[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Enemy/Core/EnemyCore.gd" type="Script" id=1]
[ext_resource path="res://GUI/HpBar/HpBar.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
length = 0.12
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.08
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="EnemyCore" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 0
collision_mask = 65
script = ExtResource( 1 )

[node name="SpriteMain" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteMain"]

[node name="FlickerAnimationPlayer" type="AnimationPlayer" parent="SpriteMain"]
anims/Damage = SubResource( 1 )
anims/Damage_Loop = SubResource( 2 )

[node name="PlatformCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="HpBar" parent="." instance=ExtResource( 2 )]
margin_left = -8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="ActiveVisNotifier" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -4.76837e-007, -0.999999 )
scale = Vector2( 3.2, 3.1 )
rect = Rect2( -8, -8, 16, 16 )

[node name="StackableDmgCounterTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
pause_particles = false
process_parent = true
physics_process_parent = true
[connection signal="screen_exited" from="ActiveVisNotifier" to="." method="_on_ActiveVisNotifier_screen_exited"]
[connection signal="timeout" from="StackableDmgCounterTimer" to="." method="_on_StackableDmgCounterTimer_timeout"]
